name:                yarpn-lib
version:             0.1.0.0
synopsis:            Library of functions and types for Yet Another RPN Compiler and Interpreter
description:         Please see README.md
homepage:            http://github.com/danplubell/yarpn-lib#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2010 Dan Plubell
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.RPN.Tokenizer
  other-modules:       Data.RPN.Internal.Types
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
  default-language:    Haskell2010

test-suite yarpn-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yarpn-lib
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danplubell/yarpn-lib
