name:                yarpni
version:             0.1.0.0
synopsis:            Yet another RPN intrepreter
description:         Please see README.md
homepage:            http://github.com/danplubell/yarpn#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2010 Dan Plubell
category:            Other
build-type:          Simple

cabal-version:       >=1.10


executable yarpni
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yarpn-lib
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danplubell/yarpn
